# Learning_langhchain

./: README.md
langchain/: pyproject.toml
langchain/chains/basics/: main.py
langchain/chains/branching/: main.py
langchain/chains/extended/: main.py  requirements.txt
langchain/chains/parallel/: main.py  requirements.txt
langchain/chat_model/: main.py  requirements.txt
